# league-outcome-simulator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  data.py  main.py  models.py  pyproject.toml  requirements.txt  simulation.py  utils.py  visualization.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
football_probs/: __main__.py  cli.py  utils.py
league_outcome_simulator/: __main__.py  catalog.py  cli.py  data.py  error_estimation.py  models.py  simulation.py  utils.py  visualization.py
src/: lib.rs
tests/: test_cli.py  test_utils.py
tests/fixtures/: sample_snapshot.json
