[package]
name = "league_outcome_simulator_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "league_outcome_simulator_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = "1.6"
num_cpus = "1.13"
lazy_static = "1.4"
