[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "league-outcome-simulator"
version = "0.1.0"
description = "Rust-accelerated simulation for League Outcome Simulator"
authors = [{name = "adrian-cancio"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"

[tool.maturin]
bindings = "pyo3"